--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Postgres Config
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/dummy
+spring.datasource.username=postgres
+spring.datasource.password=admin
 
+# Redis Config
+spring.cache.type=redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
